--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.7.2
+crispy-bootstrap5==0.7
+deprecation==2.1.0
 Django==4.2.4
+django-crispy-forms==2.0
+django-email-verification==0.3.3
+django-environ==0.11.2
 django-mathfilters==1.0.0
+packaging==23.2
 Pillow==10.0.0
+PyJWT==2.8.0
 sqlparse==0.4.4
+validators==0.22.0
