#6 stripe yookassa google-fonts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 crispy-bootstrap5==0.7
+Deprecated==1.2.14
 deprecation==2.1.0
+distro==1.8.0
 Django==4.2.4
 django-crispy-forms==2.0
 django-email-verification==0.3.3
 django-environ==0.11.2
+django-google-fonts==0.0.3
 django-mathfilters==1.0.0
+idna==3.4
+netaddr==0.9.0
 packaging==23.2
 Pillow==10.0.0
 PyJWT==2.8.0
+requests==2.31.0
+sorl-thumbnail==12.10.0
 sqlparse==0.4.4
+stripe==7.6.0
+tinycss2==1.2.1
+typing_extensions==4.8.0
+urllib3==2.1.0
 validators==0.22.0
+webencodings==0.5.1
+wrapt==1.16.0
+yookassa==2.5.0
