--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,67 @@
+amqp==5.2.0
 asgiref==3.7.2
+billiard==4.2.0
+Brotli==1.1.0
+celery==5.3.6
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 crispy-bootstrap5==0.7
+cron-descriptor==1.4.0
+cssselect2==0.7.0
 Deprecated==1.2.14
 deprecation==2.1.0
 distro==1.8.0
 Django==4.2.4
+django-celery==3.1.17
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
 django-crispy-forms==2.0
 django-email-verification==0.3.3
 django-environ==0.11.2
 django-google-fonts==0.0.3
+django-htmx==1.17.2
 django-mathfilters==1.0.0
+django-timezone-field==6.1.0
+Faker==21.0.0
+flower==2.0.1
+fonttools==4.47.0
+html5lib==1.1
+humanize==4.9.0
 idna==3.4
+kombu==5.3.4
 netaddr==0.9.0
 packaging==23.2
 Pillow==10.0.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
+pycparser==2.21
+pydyf==0.8.0
 PyJWT==2.8.0
+pyphen==0.14.0
+python-crontab==3.0.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
+six==1.16.0
 sorl-thumbnail==12.10.0
 sqlparse==0.4.4
 stripe==7.6.0
 tinycss2==1.2.1
+tornado==6.4
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.1.0
 validators==0.22.0
+vine==5.1.0
+wcwidth==0.2.12
+weasyprint==60.2
 webencodings==0.5.1
 wrapt==1.16.0
 yookassa==2.5.0
+zopfli==0.2.3
